# multilingual-auto-caption

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  Makefile  conftest.py  pyproject.toml
backend/.github/workflows/: test_build.yaml
backend/logs/2026_01_01_16_22_10_pipe/: out
backend/logs/2026_01_02_15_01_26_pipe/: transcribed_transcription_2026_01_02_15_09_38.txt
backend/logs/2026_01_02_15_09_44_pipe/: transcribed_transcription_2026_01_02_15_11_40.txt
backend/logs/2026_01_02_15_11_45_pipe/: transcribed_transcription_2026_01_02_15_15_52.txt
backend/logs/2026_01_02_15_16_12_pipe/: transcribed_transcription_2026_01_02_15_26_46.txt
backend/logs/2026_01_02_15_26_50_pipe/: transcribed_transcription_2026_01_02_15_36_30.txt
backend/logs/2026_01_02_15_36_33_pipe/: transcribed_transcription_2026_01_02_15_39_53.txt
backend/logs/2026_01_05_16_51_33_testing/: transcribed_transcription_2026_01_05_16_53_16.txt
backend/logs/2026_01_05_20_02_36_pipe/: transcribed_transcription_2026_01_05_20_12_35.txt
backend/logs/2026_01_05_20_15_49_pipe/: transcribed_transcription_2026_01_05_20_19_56.txt
backend/logs/2026_01_08_09_28_48_pipe/: transcribed_ja_2026_01_08_09_29_45.txt
backend/temp_transcriptions/: french.txt  french_20260102_170257.txt  french_20260105_142327.txt  japanese.txt  japanese_20260102_170341.txt  korean.txt  korean_20260102_170112.txt  korean_20260105_141349.txt  portuguese.txt  portuguese_20260102_170419.txt  spanish.txt  spanish_20260102_170142.txt  spanish_20260105_141540.txt
backend/tmp/: classifier.ckpt  label_encoder.ckpt
(+143 files in other folders)
