[project]
name = "captioner"
version = "0.1.0"
description = "Service to embed multilingual captions to videos"
authors = [
    {name = "Keigo Healy",email = "afkhealy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "transformers (>=4.57.3,<5.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchaudio (>=2.9.1,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "silero-vad (>=6.2.0,<7.0.0)",
    "psutil (>=7.2.1,<8.0.0)",
    "boto3 (>=1.42.19,<2.0.0)",
    "moviepy (>=2.2.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "speechbrain @ git+https://github.com/speechbrain/speechbrain.git@develop",
    "faster-whisper (>=1.2.1,<2.0.0)",
    "deep-translator (>=1.11.4,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


# [build-system]
# requires = ["poetry-core>=2.0.0,<3.0.0"]
# build-backend = "poetry.core.masonry.api"

# [tool.poetry]
# package-mode = false